# backend/docs/swagger.json
@@ -1188,7 +1188,7 @@
                                 "messages": {
                                     "type": "array",
                                     "items": {
-                                        "$ref": "#/definitions/models.Message"
+                                        "$ref": "#/definitions/model.Message"
                                     }
                                 }
                             }
@@ -1252,7 +1252,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/payment.PaymentRequest"
+                            "$ref": "#/definitions/payment.Request"
                         }
                     }
                 ],
@@ -1477,7 +1477,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/payment.RetryDemoRequest"
+                            "$ref": "#/definitions/payment.DemoRequest"
                         }
                     }
                 ],
@@ -1517,7 +1517,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/payment.SecurityCheckRequest"
+                            "$ref": "#/definitions/payment.CheckRequest"
                         }
                     }
                 ],
@@ -2599,7 +2599,7 @@
                 }
             }
         },
-        "models.Message": {
+        "model.Message": {
             "type": "object",
             "required": [
                 "content",
@@ -2626,32 +2626,7 @@
                 }
             }
         },
-        "payment.PaymentRequest": {
-            "type": "object",
-            "properties": {
-                "amount": {
-                    "type": "integer"
-                },
-                "channel": {
-                    "type": "string"
-                },
-                "idempotencyKey": {
-                    "type": "string"
-                },
-                "orderNo": {
-                    "type": "string"
-                }
-            }
-        },
-        "payment.RetryDemoRequest": {
-            "type": "object",
-            "properties": {
-                "maxRetries": {
-                    "type": "integer"
-                }
-            }
-        },
-        "payment.SecurityCheckRequest": {
+        "payment.CheckRequest": {
             "type": "object",
             "properties": {
                 "amount": {
@@ -2664,6 +2639,31 @@
                     "type": "string"
                 },
                 "sign": {
+                    "type": "string"
+                }
+            }
+        },
+        "payment.DemoRequest": {
+            "type": "object",
+            "properties": {
+                "maxRetries": {
+                    "type": "integer"
+                }
+            }
+        },
+        "payment.Request": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "channel": {
+                    "type": "string"
+                },
+                "idempotencyKey": {
+                    "type": "string"
+                },
+                "orderNo": {
                     "type": "string"
                 }
             }
